--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,5 @@
 .Header {
-  position: sticky;
-  top: 0;
+  position: relative;
   width: 100%;
   height: 53px;
   display: flex;
